Creating jfritz.exe with maven, using launch4j
- Removed unused files in EXE-creator

- Also updated jfritz.iss:
  - detecting JRE 1.9 correctly
  - using new error messages (fixed umlauts)
  - requiring JRE 1.7
  - removed unused files